<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vinilos</string>
    <string name="birth_date_label">Birth date</string>
    <string name="album_cover_description">Portada del álbum</string>
    <string name="albums_title">Álbumes</string>
    <string name="loading_albums">Cargando álbumes…</string>
    <string name="error_loading_albums">Error al cargar álbumes</string>
    
    <string name="collectors_title">Coleccionistas</string>
    <string name="loading_collectors">Cargando coleccionistas…</string>
    <string name="error_loading_collectors">Error al cargar coleccionistas</string>
    <string name="no_collectors_available">No hay coleccionistas disponibles</string>
    <string name="collector_name_label">Nombre</string>
    <string name="collector_email_label">Correo electrónico</string>
    <string name="collector_phone_label">Teléfono</string>
    <string name="collector_image_description">Imagen del coleccionista</string>
    
    <string name="artist_image_description">Imagen del artista</string>
    <string name="loading_artists">Cargando artistas…</string>
    <string name="error_loading_artists">Error al cargar artistas</string>
    <string name="no_artists_available">No hay artistas disponibles</string>
    
    <string name="nav_albums">Álbumes</string>
    <string name="nav_artists">Artistas</string>
    <string name="nav_collectors">Coleccionistas</string>
    <string name="nav_albums_desc">Pestaña de álbumes</string>
    <string name="nav_artists_desc">Pestaña de artistas en navegación inferior</string>
    <string name="nav_collectors_desc">Pestaña de coleccionistas</string>

    <string name="artist_detail_title">Detalle del Artista</string>
    <string name="albums_section_title">Álbumes</string>
    <string name="awards_section_title">Premios</string>
    <string name="award_icon_description">Icono de premio</string>
    <string name="award_default_name">Premio</string>
    <string name="birth_date_prefix">Nacimiento:</string>
    <string name="creation_date_prefix">Creación:</string>
    <string name="rating_bar_description">Calificación del álbum</string>
    <string name="comment_rating_description">Calificación del comentario</string>

    <!-- Nuevo título para la sección de Artistas Favoritos de un coleccionista -->
    <string name="favorite_artists_title">Artistas favoritos de este coleccionista</string>
</resources>
